force-app/main/default/objects/DocumentalEnvelopeAttachment__c/DocumentalEnvelopeAttachment__c.object-meta.xml
<CustomObject>
    <description>Formato Autonumber: APD-{0000}</description>
    <label>Allegato Plico Documentale</label>
    <nameField>
        <displayFormat>APD-{0000}</displayFormat>
        <label>Numero Allegato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allegati Plico Documentale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>