force-app/main/default/objects/DocumentalEnvelopeAttachment__c/fields/AttachmentCode__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCode__c</fullName>
    <description>Codice Allegato prodotto da Engage1</description>
    <label>Codice Modulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>