force-app/main/default/objects/DocumentalEnvelopeAttachment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Elenco Moduli Plico</relationshipLabel>
    <relationshipName>Allegati_Plico_Documentale</relationshipName>
    <type>Lookup</type>
</CustomField>