force-app/main/default/objects/DocumentalEnvelopeAttachment__c/fields/IsDocusignSpecialTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsDocusignSpecialTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se l&apos;allegato utilizza un template Docusign specializzato.</description>
    <label>Template Specializzato Docusign</label>
    <type>Checkbox</type>
</CustomField>