force-app/main/default/objects/DocumentalEnvelopeAttachment__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Versione allegato prodotto da Engage1</description>
    <label>Versione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>